# GenTexLab

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: cpu_real_model_pilot.json  procedural_smoke_test.json  real_diffusion_run.json  sample_experiment.json  sample_experiment.yaml
dashboard/: streamlit_app.py
gentexlab/: __init__.py  cli.py  image_utils.py  reporting.py  storage.py
gentexlab/evaluation/: __init__.py  base.py  clip.py  fft.py  registry.py  seam.py  stability.py  tiling.py
gentexlab/experiments/: __init__.py  recommendation.py  runner.py  schema.py  types.py
gentexlab/prompts/: __init__.py  library.py
report/: Benchmarking_Generative_Models_for_Text_to_Texture_Synthesis.md  build_report.py
tests/: test_prompts.py  test_runner.py
