[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gentexlab"
version = "0.1.0"
description = "Generative Texture Evaluation & Integration Framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GenTexLab" }
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["gentexlab*"]

